# taskforge-security

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SKILL_ASSESSMENTS.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: pipeline-conventions.mdc  python-fastapi.mdc  security-devsecops.mdc
.github/workflows/: ci.yml  scheduled-scan.yml
app/: __init__.py  main.py
app/api/routes/: gate.py  health.py  info.py  metrics.py  remediation.py  scan.py
app/core/: auth.py  config.py  logging_config.py  metrics.py  middleware.py  rate_limit.py
app/integrations/github/: __init__.py  client.py  create_pr.py  models.py  pr_creator.py
app/scanners/: __init__.py  dockerfile.py  kev.py  osv.py  pip_audit.py  requirements.py  trivy.py
app/schemas/: common.py  remediation.py  scan.py
app/services/: priority.py  remediation_service.py  scan_service.py
docs/examples/: remediate-response.json  scan-response.json
docs/grafana/: taskforge-security-dashboard.json
tests/: __init__.py  conftest.py  test_gate.py  test_github_preview.py  test_health.py  test_kev.py  test_osv.py  test_remediation.py  test_scan.py
